Sign In Forms + checkbox correction(z-index)

--- a/src/components/forms/forms.module.scss
+++ b/src/components/forms/forms.module.scss
@@ -26,3 +26,8 @@
   align-self: center;
   width: fit-content;
 }
+
+.formLink{
+  display: flex;
+  justify-content: flex-end;
+}
